# IRremoteESP8266

examples/HvacTelnetServer/: CommandModule.h  CommandModule.ipp  ConfigModule.h  ConfigModule.ipp  DiagnosticsModule.h  DiagnosticsModule.ipp  DinplugModule.h  DinplugModule.ipp  HvacTelnetServer.ino  HvacTelnetServer.ino.cpp  IrReceiverModule.h  IrReceiverModule.ipp  NetworkModule.h  NetworkModule.ipp  README.md  TelnetModule.h  TelnetModule.ipp  TemperatureModule.h  TemperatureModule.ipp  WebUiModule.h  WebUiModule.ipp  compile_commands.json  platformio.ini  pr_ir_hvac_server.xml  pr_somfy_newboard.xml  robatto_ir_server.xml  savant_irx-ln01.xml  savant_pav-sipa1sm.xml  zafiro_ir splitter 1x4.xml
examples/HvacTelnetServerPingTest/: HvacTelnetServerPingTest.ino  platformio.ini
examples/esp32_d3net/: CMakeLists.txt  sdkconfig  (+4 more)
examples/esp32_d3net/main/: CMakeLists.txt  app_context.h  config_store.c  main.c  telnet_server.c  telnet_server.h  web_server.c  wifi_manager.c  wifi_manager.h
examples/hvac_modbus_gateway_bridge/main/: CMakeLists.txt  address_map.c  app_config.c  app_main.c  hvac.c  modbus_client.c  ota_manager.c  telnet_server.c  web_server.c  wifi_manager.c
examples/hvac_modbus_gateway_bridge/main/include/: app_config.h  hvac.h  modbus_client.h  ota_manager.h  telnet_server.h  web_server.h  wifi_manager.h
examples/lg_hvac_modbus_telnet/main/: CMakeLists.txt  app_config.c  hvac.c  modbus_client.c  telnet_server.c  web_server.c  wifi_manager.c
examples/lg_hvac_modbus_telnet/main/include/: address_map.h  app_config.h  modbus_client.h  telnet_server.h
(+60 files in other folders)
